--- a/index.html
+++ b/index.html
@@ -82,13 +82,10 @@
             </div>
         </div>
 
-        <!--========== Pink Section ==========-->
-        <div class="pink__container">
-            <div class="pinky"></div>
-        </div>
+       
 
         <!--========== POLAROID ==========-->
-        <div class="container" id="polaroid">
+        <!-- <div class="container" id="polaroid">
             <div class="card">
                 <div class="imgBx">
                     <img src="img/1.png" alt="">
@@ -137,7 +134,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
     </main>
     
 
