--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
             </div>
         </div>
 
-       
+       <!--========== Pink Section ==========-->
+       <div class="pink__container">
+         <div class="pinky"></div>
+       </div>
 
         <!--========== POLAROID ==========-->
         <!-- <div class="container" id="polaroid">
