--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
        </div>
 
         <!--========== POLAROID ==========-->
-        <!-- <div class="container" id="polaroid">
+        <div class="container" id="polaroid">
             <div class="card">
                 <div class="imgBx">
                     <img src="img/1.png" alt="">
@@ -137,7 +137,7 @@
                 </div>
             </div>
 
-        </div> -->
+        </div>
     </main>
     
 
