--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 
         <!--========== POLAROID ==========-->
         <div class="container" id="polaroid">
+            <div class="polaroid__title">
+                <h2>Fotos</h2>
+            </div>
             <div class="card">
                 <div class="imgBx">
                     <img src="img/1.png" alt="">
