--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#3a3a3c">
 
     <!--========== Google Fonts ==========-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +16,11 @@
 
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="style.css">
+
+    <!--========== Manifest ==========-->
+    <link rel="manifest" href="manifest.json">
+
+    <link rel="apple-touch-icon" href="img/logo192.png">
 
     <title>Dedessa</title>
 </head>
@@ -183,6 +189,8 @@
             <p class="footer__copy">&#169; DreAn Team. All right reserved</p>
         </div>
     </footer> -->
+
+    <script src="index.js"></script>
     
 </body>
 </html>
